<resources>
    <string name="app_name">Album</string>
    <string name="login">登  录</string>
    <string name="forgetPaw">忘记密码？</string>
    <string name="register">注册新用户</string>
    <string name="hintname">手机号</string>
    <string name="hintPwd">密码</string>
    <string name="register_btn">注  册</string>
    <string name="sure_pwd">确认密码</string>
    <string name="code">验证码</string>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="tv_home">首页</string>
    <string name="tv_search">发现</string>
    <string name="tv_follow">关注</string>
    <string name="tv_my">我的</string>
    <string name="exit_follow">取消关注</string>
    <string name="follow">关注</string>
    <string name="nick">昵称</string>
    <string name="zhanghu">账户</string>
</resources>
