<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ygy.album.activity.MainActivity">
    <android.support.v4.view.ViewPager
        android:id="@+id/viewpager_mian"
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_above="@+id/radiogroup">
    </android.support.v4.view.ViewPager>
<RadioGroup
    android:id="@+id/radiogroup"
    android:layout_width="match_parent"
    android:layout_height="50dp"
    android:orientation="horizontal"
    android:gravity="center"
    android:layout_alignParentBottom="true"
    android:background="#ffffff"
    android:paddingTop="8dp">
    <RadioButton
        android:id="@+id/radbtn_home"
        android:drawableTop="@drawable/selector_home"
        android:text="@string/tv_home"
        style="@style/textStyle"
        android:checked="true"/>
    <RadioButton
        android:id="@+id/radbtn_search"
        android:drawableTop="@drawable/selector_search"
        android:text="@string/tv_search"
        style="@style/textStyle"/>
    <Button
        android:id="@+id/radbtn_add"
        android:layout_width="40dp"
        android:layout_height="40dp"
        android:layout_weight="1"
        android:button="@null"
        android:gravity="center"
        android:textSize="0dp"
        android:drawableTop="@mipmap/main_add"
        android:background="?android:attr/selectableItemBackgroundBorderless"/>
    <RadioButton
        android:id="@+id/radbtn_follow"
        android:drawableTop="@drawable/selector_follow"
        android:text="@string/tv_follow"
        style="@style/textStyle"/>
    <RadioButton
        android:id="@+id/radbtn_my"
        android:drawableTop="@drawable/selector_my"
        android:text="@string/tv_my"
        style="@style/textStyle"/>
    </RadioGroup>
</RelativeLayout>
