<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ygy.album.activity.LoginActivity">
<com.ygy.album.custView.CustVideoPlay
    android:id="@+id/custVideoView"
    android:layout_width="match_parent"
    android:layout_height="match_parent" />
    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="200dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:layout_alignParentBottom="true"
        android:layout_marginBottom="100dp">
        <EditText
            android:id="@+id/edt_login_name"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hintname"
            android:textColorHint="#dddfe4"
            android:textColor="#dddfe4"
            android:background="@null"
            android:drawableBottom="@drawable/shape_line"
            android:textCursorDrawable="@null"/>
        <EditText
            android:id="@+id/edt_login_pwd"
            android:layout_width="match_parent"
            android:layout_height="40dp"
            android:hint="@string/hintPwd"
            android:textColorHint="#dddfe4"
            android:textColor="#dddfe4"
            android:background="@null"
            android:drawableBottom="@drawable/shape_line"
            android:textCursorDrawable="@null"
            android:layout_below="@+id/edt_login_name"/>
        <Button
            android:id="@+id/btn_login"
            android:layout_width="match_parent"
            android:layout_height="35dp"
            android:layout_below="@+id/edt_login_pwd"
            android:text="@string/login"
            android:textColor="#ffffff"
            android:textSize="15dp"
            android:background="@drawable/shape_btn_login"
            android:layout_marginTop="20dp"/>
        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_below="@+id/btn_login"
            android:layout_marginTop="10dp">
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/forgetPaw"
                android:textColor="#1CA9E1"/>
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/register"
                android:textColor="#1CA9E1"
                android:layout_alignParentRight="true"/>
        </RelativeLayout>
    </RelativeLayout>
</RelativeLayout>
