<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context="com.ygy.album.activity.LoginActivity"
    android:id="@+id/activityLayout">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent">
        <ImageView
            android:id="@+id/img_register_bck"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:src="@mipmap/register_background"
            android:scaleType="fitXY"/>

        <RelativeLayout
            android:id="@+id/viewLayout"
            android:layout_width="match_parent"
            android:layout_height="300dp"
            android:layout_marginLeft="20dp"
            android:layout_marginRight="20dp"
            android:layout_alignParentBottom="true"
            android:layout_marginBottom="80dp"
            android:background="#00ffffff">
            <EditText
                android:id="@+id/edt_register_name"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="phone"
                android:hint="@string/hintname"
                android:textColorHint="#dddfe4"
                android:textColor="#dddfe4"
                android:background="@null"
                android:drawableBottom="@drawable/shape_line"
                android:textCursorDrawable="@null"
                android:layout_marginTop="50dp"/>
            <LinearLayout
                android:id="@+id/sm_view"
                android:layout_width="match_parent"
                android:layout_height="60dp"
                android:orientation="horizontal"
                android:layout_below="@+id/edt_register_name">
                <EditText
                    android:id="@+id/tv_register_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="7"
                    android:hint="@string/code"
                    android:textColorHint="#dddfe4"
                    android:textColor="#dddfe4"
                    android:background="@null"
                    android:drawableBottom="@drawable/shape_line"
                    android:textCursorDrawable="@null"
                    android:layout_gravity="center"/>
                <Button
                    android:id="@+id/btn_register_code"
                    android:layout_width="wrap_content"
                    android:layout_height="40dp"
                    android:layout_weight="1"
                    android:layout_gravity="center"
                    android:text="验证码"
                    android:textColor="#ffffff"
                    android:textSize="15dp"
                    android:background="@drawable/shape_btn_code"/>
            </LinearLayout>
            <EditText
                android:id="@+id/edt_register_pwd"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/hintPwd"
                android:textColorHint="#dddfe4"
                android:textColor="#dddfe4"
                android:background="@null"
                android:drawableBottom="@drawable/shape_line"
                android:textCursorDrawable="@null"
                android:layout_below="@+id/sm_view"/>
            <EditText
                android:id="@+id/edt_register_pwd2"
                android:layout_width="match_parent"
                android:layout_height="40dp"
                android:inputType="textPassword"
                android:hint="@string/sure_pwd"
                android:textColorHint="#dddfe4"
                android:textColor="#dddfe4"
                android:background="@null"
                android:drawableBottom="@drawable/shape_line"
                android:textCursorDrawable="@null"
                android:layout_below="@+id/edt_register_pwd"
                android:layout_marginTop="10dp"/>
            <Button
                android:id="@+id/btn_login"
                android:layout_width="match_parent"
                android:layout_height="35dp"
                android:layout_below="@+id/edt_register_pwd2"
                android:text="@string/register_btn"
                android:textColor="#ffffff"
                android:textSize="15dp"
                android:background="@drawable/shape_btn_login"
                android:layout_marginTop="20dp"/>

        </RelativeLayout>

    </RelativeLayout>
</RelativeLayout>
